ex001 dos exercicios extras alterações

--- a/exercicios-separados/ex001.html
+++ b/exercicios-separados/ex001.html
@@ -11,6 +11,7 @@
 }
 
 body{
+ 
     background-color: cadetblue;
     min-height: 100vh;
 }
@@ -36,9 +37,59 @@ div#imagem{
     padding-left: 30px;
 }
 
+p{
+    text-align: right;
+    vertical-align: top;
+}
+
+
+table{
+            height: 400px;
+            width: 400px;
+            border-collapse: collapse;
+        }
+
+        td{
+            border: 1px solid black;
+            padding: 8px;
+         text-align: center;
+            vertical-align: middle;
+        }
+
     </style>
 </head>
 <body>
+
+<table>
+    <tr>
+        <td>
+            A1
+        </td>
+        <td>
+            B1
+        </td>
+        <td>
+            C1
+        </td>
+    </tr>
+    <tr>
+        <td>A2</td>
+        <td>B2</td>
+        <td class="numero">C2</td>
+    </tr>
+    <tr>
+        <td>A3</td>
+        <td>B3</td>
+        <td  class="numero">C3</td>
+    </tr>
+    <tr>
+        <td>A4</td>
+        <td>B4</td>
+        <td>C4</td>
+    </tr>
+</table>
+
+
     <div class="normal">
 
     </div>
