--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -20,7 +20,7 @@
    </p>
 
         
-   <iframe src="pagina001.html" frameborder="0"  width="500px" height="500px">
+   <iframe src="exercicios-extras/pagina001.html" frameborder="0"  width="500px" height="500px">
     <a href="https://www.cursoemvideo.com">CursoemVideo</a>
 
 </iframe>
@@ -28,6 +28,5 @@
    <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate iste provident eveniet iusto consequatur error maiores adipisci, repellendus explicabo omnis amet totam voluptatibus voluptas illo quo voluptate aliquam exercitationem sint? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint, similique. Cum, hic! Soluta sapiente, a vitae sint ducimus suscipit exercitationem fuga pariatur hic recusandae totam delectus earum vero voluptas quaerat!
    </p>
-</iframe>
 </body>
 </html>
