--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-queries.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img src="imagens/icon-phone.png" alt="Telefone" id="telefone">
+        <img src="imagens/icon-tablet.png" alt="Tablet" id="tablet">
+        <img src="imagens/icon-print.png" alt="Impressão" id="impressão">
+        <img src="imagens/icon-pc.png" alt="Computador" id="computador">
+        <img src="imagens/icon-tv.png" alt="Televisão" id="televisão">
+    </main>
 </body>
 </html>
