--- a/exercicios-separados/exercicios-para-relembrar/media-queries-relembrar/mediaquery002.html
+++ b/exercicios-separados/exercicios-para-relembrar/media-queries-relembrar/mediaquery002.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <style>
-        @media screen and(orientation: portrait) {
+        @media screen and (orientation: landscape) {
+            body{
+                background-color: red;
+            }
+
             h1{
-                color: red;
+                color: white;
             }
         }
     </style>
 </head>
 <body>
-    
+    <h1>Media Query</h1>
 </body>
 </html>
