--- a/exercicios/ex028/grid/index.html
+++ b/exercicios/ex028/grid/index.html
@@ -6,11 +6,19 @@
     <title>Grid Layout na prática</title>
     <style>
         div.container{
-            height:  250px;
             border: 3px solid blue;
             display: grid;
-            grid-template-columns:  auto auto auto;
-            grid-template-rows: auto auto auto;
+            /*grid-template-rows: 100px 100px 100px;
+            grid-template-columns: auto auto auto;*/
+            grid-template: 100px 100px 100px /auto auto auto;
+            /*align-items: start;
+            justify-items:  end;*/
+            place-items: start end;
+            /*align-content: start;
+            justify-content: end;*/
+            place-content: start end;
+            grid-auto-columns: 100px;
+            grid-auto-rows: 100px;
             gap: 5px;
         }
 
@@ -27,6 +35,12 @@
             <div class="item">C</div>
             <div class="item">D</div>
             <div class="item">E</div>
+            <div class="item">F</div>
+            <div class="item">G</div>
+            <div class="item">H</div>
+            <div class="item">F</div>
+            <div class="item">G</div>
+            <div class="item">H</div>
             <div class="item">F</div>
             <div class="item">G</div>
             <div class="item">H</div>
