--- a/exercicios-separados/extra-013/index.html
+++ b/exercicios-separados/extra-013/index.html
@@ -8,11 +8,11 @@
         @media screen and (min-width: 678px) {
             main{
             display: grid;
-            grid-template-columns: repeat(auto-fit, 100px);
+            grid-template-columns: repeat(7, 100px);
             grid-auto-rows: 100px;
-            grid-template-areas: "header header header header header header"
-            "aside main main main main main"
-            " footer footer footer footer footer footer";
+            grid-template-areas: "header header header header header header header"
+            "aside main main main main main main"
+            " footer footer footer footer footer footer footer";
             gap: .5rem;
 
             justify-content: start;
